# boreth

./: Cargo.toml  README.md  boreth-test-cases.md
.github/workflows/: ci.yml
crates/bor/: Cargo.toml
crates/bor-chainspec/: Cargo.toml
crates/bor-chainspec/res/: amoy_genesis.json  amoy_genesis_alloc.json
crates/bor-chainspec/src/: amoy.rs  bootnodes.rs  chainspec.rs  cli.rs  constants.rs  genesis.rs  hardfork.rs  lib.rs  params.rs
crates/bor-chainspec/tests/: comprehensive_hardfork_tests.rs
crates/bor-consensus/: Cargo.toml
crates/bor-consensus/src/: block_validation.rs  difficulty.rs  extra_data.rs  lib.rs  proposer.rs  recents.rs  reth_consensus.rs  seal.rs  snapshot.rs  span_prefetch.rs  validation.rs
crates/bor-consensus/tests/: comprehensive_tests.rs  go_snapshot_port.rs  go_valset_port.rs  go_verify_header_port.rs  stress_test.rs
crates/bor-evm/: Cargo.toml
crates/bor-evm/src/: block_executor.rs  build.rs  config.rs  evm_config.rs  executor.rs  lib.rs  system_call.rs
crates/bor-evm/tests/: comprehensive_evm_tests.rs  go_state_sync_port.rs
crates/bor-node/: Cargo.toml
crates/bor-node/src/: config.rs  handshake.rs  lib.rs  node.rs
crates/bor-node/tests/: integration_amoy.rs  integration_delhi.rs  integration_madhugiri.rs  integration_rio.rs  integration_state_root.rs
crates/bor-payload/: Cargo.toml
crates/bor-payload/src/: builder.rs  lib.rs
crates/bor-payload/tests/: comprehensive_payload_tests.rs
crates/bor-primitives/: Cargo.toml
crates/bor-primitives/src/: lib.rs
crates/bor-primitives/tests/: comprehensive_primitives_tests.rs
crates/bor-rpc/: Cargo.toml
crates/bor-rpc/src/: api.rs  lib.rs  methods.rs  types.rs
crates/bor-rpc/tests/: comprehensive_rpc_tests.rs  go_api_port.rs
crates/bor-storage/: Cargo.toml
crates/bor-storage/src/: gas.rs  lib.rs  persistence.rs  receipt.rs  receipt_key.rs  tables.rs
crates/bor-storage/tests/: comprehensive_storage_tests.rs  receipt_key_crosscheck.rs
crates/bor-testdata/: Cargo.toml
crates/bor-testdata/scripts/: fetch_golden_blocks.py
crates/bor-testdata/src/: blocks.rs  helpers.rs  lib.rs
crates/bor-testdata/tests/: golden_block_tests.rs
crates/bor/src/: call_message.rs  config.rs  heimdall.rs  lib.rs  params.rs  system_addres.rs
crates/bor/src/heimdall/: client.rs  error.rs  event.rs  genesis_contract_client.rs  span.rs
crates/bor/src/heimdall/genesis_contract_client/: state_receiver.rs
crates/heimdall-client/: Cargo.toml
crates/heimdall-client/src/: cache.rs  http.rs  lib.rs  mock.rs
crates/heimdall-client/tests/: comprehensive_client_tests.rs
crates/node/: Cargo.toml
crates/node/src/: consensus.rs  executor.rs  lib.rs  node.rs
crates/node/src/consensus/: consensus.rs  constants.rs
crates/node/src/executor/: config.rs  constants.rs  executor.rs  system_call.rs
src/: lib.rs
