[package]
name = "boreth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"

[workspace]
resolver = "3"
members = [ "crates/bor",
  "crates/node"
]

[workspace.dependencies]



