[package]
name = "bor-consensus"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
bor-primitives = { workspace = true }
bor-chainspec = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
