[package]
name = "bor-node"
version.workspace = true
edition.workspace = true

[dependencies]
bor-chainspec = { workspace = true }
bor-consensus = { workspace = true }
bor-evm = { workspace = true }
bor-payload = { workspace = true }
bor-primitives = { workspace = true }
bor-rpc = { workspace = true }
bor-storage = { workspace = true }
heimdall-client = { workspace = true }

# Alloy
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }

# Reth networking
reth-eth-wire = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-primitives-traits = { workspace = true }

# Misc
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
