[package]
name = "bor-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
bor-consensus = { workspace = true }
bor-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bor-primitives = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
serde_json = { workspace = true }
