[package]
name = "bor"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
alloy-evm = "0.10"
revm-context = { version = "4.0.0", default-features = false }
alloy-json-abi="1.1.0"
alloy-sol-types="1.2.0"
alloy-primitives = {version ="1.2.0", features=["serde","rlp"]}
alloy-rlp = "0.3"
alloy-rpc-types-eth = { version = "0.15.11", default-features = false }
alloy-consensus = { version = "0.15.11", default-features = false }


