[package]
name = "heimdall-client"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bor-primitives = { workspace = true }
