[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
bor = { path = "../bor" }
async-trait = "0.1"
chrono = "0.4"
ethabi = "18.0"
ethereum-types = "0.14"
lazy_static = "1.4"
log = "0.4"
rlp = "0.5"
serde_json = "1.0"
web3 = "0.19"
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7"}
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7"  }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7"        }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["std"] }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }

# revm
revm = { version = "23.1.0", default-features = false }
revm-bytecode = { version = "4.0.0", default-features = false }
revm-database = { version = "4.0.0", default-features = false }
revm-state = { version = "4.0.0", default-features = false }
revm-primitives = { version = "19.0.0", default-features = false }
revm-interpreter = { version = "19.0.0", default-features = false }
revm-inspector = { version = "4.0.0", default-features = false }
revm-context = { version = "4.0.0", default-features = false }
revm-context-interface = { version = "4.0.0", default-features = false }
revm-database-interface = { version = "4.0.0", default-features = false }
op-revm = { version = "4.0.2", default-features = false }
revm-inspectors = "0.21.0"

# eth
alloy-chains = { version = "0.2.0", default-features = false }
alloy-dyn-abi = "1.1.0"
alloy-eip2124 = { version = "0.2.0", default-features = false }
alloy-evm = { version = "0.7.1", default-features = false }
alloy-primitives = { version = "1.1.0", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-sol-macro = "1.1.0"
alloy-sol-types = { version = "1.1.0", default-features = false }
alloy-trie = { version = "0.8.1", default-features = false }

alloy-hardforks = "0.2.0"

alloy-consensus = { version = "0.15.11", default-features = false }
alloy-contract = { version = "0.15.11", default-features = false }
alloy-eips = { version = "0.15.11", default-features = false }
alloy-genesis = { version = "0.15.11", default-features = false }
alloy-json-rpc = { version = "0.15.11", default-features = false }
alloy-network = { version = "0.15.11", default-features = false }
alloy-network-primitives = { version = "0.15.11", default-features = false }
alloy-provider = { version = "0.15.11", features = ["reqwest"], default-features = false }
alloy-pubsub = { version = "0.15.11", default-features = false }
alloy-rpc-client = { version = "0.15.11", default-features = false }
alloy-rpc-types = { version = "0.15.11", features = ["eth"], default-features = false }
alloy-rpc-types-admin = { version = "0.15.11", default-features = false }
alloy-rpc-types-anvil = { version = "0.15.11", default-features = false }
alloy-rpc-types-beacon = { version = "0.15.11", default-features = false }
alloy-rpc-types-debug = { version = "0.15.11", default-features = false }
alloy-rpc-types-engine = { version = "0.15.11", default-features = false }
alloy-rpc-types-eth = { version = "0.15.11", default-features = false }
alloy-rpc-types-mev = { version = "0.15.11", default-features = false }
alloy-rpc-types-trace = { version = "0.15.11", default-features = false }
alloy-rpc-types-txpool = { version = "0.15.11", default-features = false }
alloy-serde = { version = "0.15.11", default-features = false }
alloy-signer = { version = "0.15.11", default-features = false }
alloy-signer-local = { version = "0.15.11", default-features = false }
alloy-transport = { version = "0.15.11" }
alloy-transport-http = { version = "0.15.11", features = ["reqwest-rustls-tls"], default-features = false }
alloy-transport-ipc = { version = "0.15.11", default-features = false }
alloy-transport-ws = { version = "0.15.11", default-features = false }

#misc
eyre = "0.6"
auto_impl = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }





