[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
bor = { path = "../bor" }
reth = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["serde"] }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7", features = ["test-utils"] }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "66692a7" }
revm = { version = "24.0.1", features = ["secp256r1"] }
revm-context = { version = "5.0.0", default-features = false }



# eth
# alloy dependencies
alloy-genesis = "1.0.9"
alloy-consensus = "1.0.9"
alloy-chains = "0.2.0"
alloy-eips = "1.0.9"
alloy-evm = "0.10"
alloy-json-abi = { version = "1.0.0", default-features = false }
alloy-dyn-abi = "1.1.0"
alloy-network = "1.0.9"
alloy-primitives = { version = "1.1.0", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-rpc-types = { version = "1.0.9", features = ["engine"] }
alloy-rpc-types-eth = "1.0.9"
alloy-rpc-types-engine = "1.0.9"
alloy-signer = "1.0.9"
alloy-sol-macro = "1.1.0"
alloy-sol-types = { version = "1.1.0", default-features = false }
alloy-hardforks = "0.2.0"

jsonrpsee = "0.25.1"
jsonrpsee-core = { version = "0.25.1" }
jsonrpsee-types = "0.25.1"

#misc
eyre = "0.6"
auto_impl = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }





